// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopPagesRealtime when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <figure
    class="top-pages__realtime loaded"
    data-refresh="15"
    data-source="http://www.example.com/data//foobar.json"
  >
    <div
      class="data bar-chart"
    >
      <div
        class="bin"
      >
        <div
          class="label"
        >
          National Institute of Standards and Technology | NIST
        </div>
        <div
          class="value"
        >
          7,689
        </div>
        <div
          class="bar"
          style="width: 100.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          USPS.com® - USPS Tracking® Results
        </div>
        <div
          class="value"
        >
          7,657
        </div>
        <div
          class="bar"
          style="width: 100.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Federal Student Aid
        </div>
        <div
          class="value"
        >
          3,576
        </div>
        <div
          class="bar"
          style="width: 47.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          USAJOBS - Search
        </div>
        <div
          class="value"
        >
          2,242
        </div>
        <div
          class="bar"
          style="width: 30.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          USPS.com® - Sign In
        </div>
        <div
          class="value"
        >
          1,452
        </div>
        <div
          class="bar"
          style="width: 20.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Search Public Sex Offender Registries | Dru Sjodin National Sex Offender Public Website
        </div>
        <div
          class="value"
        >
          1,420
        </div>
        <div
          class="bar"
          style="width: 19.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Informed Delivery
        </div>
        <div
          class="value"
        >
          1,347
        </div>
        <div
          class="bar"
          style="width: 18.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          NWS Radar
        </div>
        <div
          class="value"
        >
          1,266
        </div>
        <div
          class="bar"
          style="width: 17.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          USAJOBS - Job Announcement
        </div>
        <div
          class="value"
        >
          1,226
        </div>
        <div
          class="bar"
          style="width: 17.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Official ESTA Application Website, U.S. Customs and Border Protection
        </div>
        <div
          class="value"
        >
          928
        </div>
        <div
          class="bar"
          style="width: 13.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Social Security
        </div>
        <div
          class="value"
        >
          714
        </div>
        <div
          class="bar"
          style="width: 10.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Welcome | USPS
        </div>
        <div
          class="value"
        >
          629
        </div>
        <div
          class="bar"
          style="width: 9.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          SAM.gov
        </div>
        <div
          class="value"
        >
          566
        </div>
        <div
          class="bar"
          style="width: 8.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          SAM.gov | Search
        </div>
        <div
          class="value"
        >
          564
        </div>
        <div
          class="bar"
          style="width: 8.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Log In | Federal Student Aid
        </div>
        <div
          class="value"
        >
          500
        </div>
        <div
          class="bar"
          style="width: 7.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          National Weather Service
        </div>
        <div
          class="value"
        >
          485
        </div>
        <div
          class="bar"
          style="width: 7.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          USPS.com® - USPS Tracking®
        </div>
        <div
          class="value"
        >
          440
        </div>
        <div
          class="bar"
          style="width: 7.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          FAFSA® Application | Federal Student Aid
        </div>
        <div
          class="value"
        >
          429
        </div>
        <div
          class="bar"
          style="width: 7.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Home - My HealtheVet - My HealtheVet
        </div>
        <div
          class="value"
        >
          400
        </div>
        <div
          class="bar"
          style="width: 6.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Home | Dru Sjodin National Sex Offender Public Website
        </div>
        <div
          class="value"
        >
          400
        </div>
        <div
          class="bar"
          style="width: 6.0%;"
        />
      </div>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`TopPagesRealtime when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <figure
    class="top-pages__realtime loading"
    data-refresh="15"
    data-source="http://www.example.com/data//foobar.json"
  >
    <div
      class="data bar-chart"
    />
  </figure>
</DocumentFragment>
`;

exports[`TopPagesRealtime when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <figure
    class="top-pages__realtime error"
    data-refresh="15"
    data-source="http://www.example.com/data//foobar.json"
  >
    <div
      class="data bar-chart"
    />
  </figure>
</DocumentFragment>
`;
